# fuzzy-octo-barnacle

./: Dockerfile  README.md  flake.nix  pyproject.toml  run.sh
.github/workflows/: docker-image.yml
data-ops/: .gitignore  meltano.yml
